--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -24,6 +24,7 @@
         android:layout_marginTop="30dp"
         android:text="Title"
         android:layout_gravity="center"
+        android:textAlignment="center"
         android:textColor="#DA0F0F"
         android:textSize="30sp" />
 
@@ -33,6 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_gravity="center"
+        android:textAlignment="center"
         android:text="Details"
         android:textSize="20sp" />
 
